@@ -8,11 +8,21 @@ from pygame.locals import (
 SCREEN_WIDTH = 1920
 SCREEN_HEIGHT = 1080
 
+cloud = pygame.image.load("Media/cloud.png")
+bullet1 = pygame.image.load("Media/bullet.png")
+carrot = pygame.image.load("Media/carrot.png")
+healthbuff = pygame.image.load("Media/healthbuff.png")
+damagebuff = pygame.image.load("Media/damagebuff.png")
+bulletbuff = pygame.image.load("Media/bulletbuff.png")
+ebullet = pygame.image.load("Media/ebullet.png")
+
+images = [cloud,bullet1, ebullet, carrot,healthbuff,damagebuff,bulletbuff]
+
 
 class Cloud(pygame.sprite.DirtySprite):
     def __init__(self):
         super(Cloud, self).__init__()
-        self.surf = pygame.image.load("Media/cloud.png").convert()
+        self.surf = images[0].convert()
         self.surf.set_colorkey((255, 255, 255), RLEACCEL)
         # The starting position is randomly generated
         self._layer = 0
@@ -32,26 +42,49 @@ class Cloud(pygame.sprite.DirtySprite):
 
 
 class Bullet1(pygame.sprite.DirtySprite):
-    def __init__(self, position, power, speed):
+    def __init__(self, flag, position, power, speed):
         super(Bullet1, self).__init__()
-        self.surf = pygame.image.load("Media/bullet.png").convert()
+        self.surf = images[1].convert()
         self.surf.set_colorkey((255, 255, 255), RLEACCEL)
-        self.rect = self.surf.get_rect(center= (position[0],position[1] + 25))
+        self._layer = 1
+        self.damage = power
+        self.speed = speed
+        self.bad = flag
+        if flag:  # if bullet called by enemy flip direction of bullet and ceneter
+            self.rect = self.surf.get_rect(center=position)
+        else:
+            self.rect = self.surf.get_rect(center=(position[0], position[1] + 25))
+
+    def update(self):
+        # Add the velocity to the position vector to move the sprite.
+        self.rect.move_ip( - self.speed, 0)
+        if not self.bad and self.rect.left > SCREEN_WIDTH:
+            self.kill()
+        elif self.bad and self.right < 0:
+            self.kill()
+
+
+class EBullet(pygame.sprite.DirtySprite):
+    def __init__(self, position, power, speed):
+        super(EBullet, self).__init__()
+        self.surf = images[2].convert()
+        self.surf.set_colorkey((255, 255, 255), RLEACCEL)
+        self.rect = self.surf.get_rect(center=position)
         self._layer = 1
         self.damage = power
         self.speed = speed
 
     def update(self):
         # Add the velocity to the position vector to move the sprite.
-        self.rect.move_ip(self.speed, 0)
-        if self.rect.left > SCREEN_WIDTH:
+        self.rect.move_ip( self.speed, 0)
+        if self.right < 0:
             self.kill()
 
 
 class Carrot(pygame.sprite.DirtySprite):
     def __init__(self, position):
         super(Carrot, self).__init__()
-        self.surf = pygame.image.load("Media/carrot.png").convert()
+        self.surf = images[3].convert()
         self.surf.set_colorkey((0, 0, 0), RLEACCEL)
         self.rect = self.surf.get_rect(center=position)
         self.pos = pygame.math.Vector2(position)
@@ -72,7 +105,7 @@ class Carrot(pygame.sprite.DirtySprite):
 class HealthBuff(pygame.sprite.DirtySprite):
     def __init__(self):
         super(HealthBuff, self).__init__()
-        self.surf = pygame.image.load("Media/healthbuff.png").convert()
+        self.surf = images[4].convert()
         self.surf.set_colorkey((255, 255, 255), RLEACCEL)
         # The starting position is randomly generated
         self._layer = 1
@@ -95,7 +128,7 @@ class HealthBuff(pygame.sprite.DirtySprite):
 class DamageBuff(pygame.sprite.DirtySprite):
     def __init__(self):
         super(DamageBuff, self).__init__()
-        self.surf = pygame.image.load("Media/damagebuff.png").convert()
+        self.surf = images[5].convert()
         self.surf.set_colorkey((255, 255, 255), RLEACCEL)
         # The starting position is randomly generated
         self._layer = 1
@@ -117,7 +150,7 @@ class DamageBuff(pygame.sprite.DirtySprite):
 class BulletBuff(pygame.sprite.DirtySprite):
     def __init__(self):
         super(BulletBuff, self).__init__()
-        self.surf = pygame.image.load("Media/bulletbuff.png").convert()
+        self.surf = images[6].convert()
         self.surf.set_colorkey((255, 255, 255), RLEACCEL)
         # The starting position is randomly generated
         self._layer = 1
