@@ -40,3 +40,4 @@
 2.6: * slow day today... got a HUD working that can be used across levels
      * Got the first level working with the new HUD, took forever
      * First three levels working.
+     * got enemy shooting mechanics but they wont show up on screen
